fix responsive overflow in login

--- a/src/components/common/input/input.scss
+++ b/src/components/common/input/input.scss
@@ -40,7 +40,7 @@
         color: var(--redErrorHover);
         font-size: 0.8rem;
         margin: 0.3rem 0 0.3rem 1rem;
-        height: fit-content;
+        min-height: 1.2rem;
     }
 
     #email-svg,
