--- a/src/views/Login/login.scss
+++ b/src/views/Login/login.scss
@@ -5,7 +5,7 @@
     align-items: center;
     border-radius: 1rem;
     box-shadow: 1px 1px 10px 5px var(--shadow-color);
-    overflow: auto;
+    overflow-y: auto;
     background-color: var(--background-color-container);
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -38,7 +38,7 @@
         font-size: 2.25rem;
         font-weight: 600;
         text-align: center;
-        margin: 0 0 1rem 0;
+        margin: 1rem 0;
         color: var(--text-color);
     }
 
@@ -62,13 +62,13 @@
 
         .filledButton {
             width: 14vw;
-            height: 9vh;
+            height: 8vh;
             margin-right: 1rem;
         }
 
         .emptyButton {
             width: 14vw;
-            height: 9vh;
+            height: 8vh;
         }
     }
 
@@ -77,11 +77,12 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        padding: 4rem 0 0 0;
+        padding-top: 10vh;
 
         &__title {
             font-size: 0.7rem;
             color: var(--text-color);
+            text-align: center;
         }
     }
 }
@@ -93,19 +94,53 @@
 }
 
 @media only screen and (max-width: 768px) {
+    .login-container {
+        display: inline-flex;
+    }
+
     .login-pic {
         display: none;
     }
 
     .login-info {
+        margin: auto;
+
         &__buttons-container {
 
             .filledButton {
                 width: 25vw;
+                height: 6vh;
             }
 
             .emptyButton {
                 width: 25vw;
+                height: 6vh;
+            }
+        }
+    }
+}
+
+@media only screen and (max-height: 560px) {
+    .login-container {
+        display: inline-flex;
+    }
+
+    .login-pic {
+        display: none;
+    }
+
+    .login-info {
+        margin: auto;
+
+        &__buttons-container {
+            .filledButton {
+                font-size: 0.8rem;
+                height: 2.5rem;
+            }
+
+            .emptyButton {
+                font-size: 0.8rem;
+                height: 2.5rem;
             }
         }
     }
@@ -155,26 +190,28 @@
     }
 }
 
-@media only screen and (max-height: 460px) {
-    .login-pic {
-        display: none;
-    }
-
+@media only screen and (max-width: 300px) {
     .login-info {
-        &__title {
-            margin: 8rem 0 0rem 0;
 
+        &__subtitles {
+            flex-direction: column;
+
+            .customLink {
+                margin-top: 1rem;
+            }
         }
 
         &__buttons-container {
+            flex-direction: column;
+
             .filledButton {
-                font-size: 0.8rem;
-                height: 2.5rem;
+                margin: 1rem 0;
+                width: 50vw;
             }
 
             .emptyButton {
-                font-size: 0.8rem;
-                height: 2.5rem;
+                width: 50vw;
+                margin-bottom: 1rem;
             }
         }
     }
